Fix chat box's z-index

--- a/frontend/src/css/components/chatbot.css
+++ b/frontend/src/css/components/chatbot.css
@@ -1,6 +1,6 @@
 .chatbot-bubble {
-    position: fixed;
     z-index: 10;
+    position: fixed;
     bottom: 1.25rem;
     right: 1.25rem;
     padding: 0.625rem;
@@ -33,9 +33,9 @@
 }
 
 .chatbox {
+    z-index: 10;
     display: none;
     position: fixed;
-    z-index: 3;
     bottom: 1.25rem;
     right: 1.25rem;
     width: 26.5625rem;
